@@ -1,3 +1,4 @@
+* BUGFIX: KSI_receivePublicationsFile must not verify publications file automatically.
 * BUGFIX: Invalid and misleading exception message on response publication time check.
 
 Version 3.8
